@@ -41,3 +41,7 @@ Created a backend with user info as shown in the lecture exactly as presented by
 (03/23/22)
 Set up my project with a firebase realtime database and URL.  All firebase imports have been made in the project.
 I'm still having some issues getting my backend info into my site.  Not entirely sure why.  Will reach out for direction soon.
+
+(03/31/22)
+Set up my form to add stories. Now I can add these to my backend.  This can be done from the "admin" page.
+
